// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Button 1`] = `
<div>
  <button
    class="button base work primary"
    type="button"
  >
    <span
      class="base extraBold base base"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`renders a Button that is just an icon 1`] = `
<div>
  <button
    aria-label="Person"
    class="button base onlyIcon work primary"
    type="button"
  >
    <svg
      class="Z6OfUI2sH34- TphtDHcwxDc-"
      data-testid="user"
      viewBox="0 0 720 720"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class=""
        d="M480.469 298.182c0-66.339-53.78-120.118-120.118-120.118-66.339 0-120.118 53.779-120.118 120.118 0 66.338 53.779 120.118 120.118 120.118 66.338 0 120.118-53.78 120.118-120.118zM420.41 298.182c0 33.171-26.888 60.058-60.058 60.058s-60.058-26.888-60.058-60.058c0-33.169 26.888-60.058 60.058-60.058s60.058 26.889 60.058 60.058zM660.646 358.241c0 165.845-134.447 300.293-300.293 300.293-165.847 0-300.293-134.447-300.293-300.293 0-165.848 134.446-300.293 300.293-300.293 165.845 0 300.293 134.446 300.293 300.293zM360.352 598.475c44.125 0 85.47-11.895 121.003-32.654-62.401-55.99-114.874-62.665-155.396-53.023-34.045 8.101-64.208 28.687-88.61 51.843 35.98 21.486 78.048 33.834 123.003 33.834zM312.055 454.373c66.245-15.765 140.618 1.676 217.583 74.32 43.816-43.519 70.947-103.817 70.947-170.453 0-132.678-107.556-240.235-240.235-240.235s-240.235 107.556-240.235 240.235c0 65.912 26.544 125.625 69.525 169.029 30.575-30.495 71.956-60.891 122.413-72.896z"
      />
    </svg>
    <span
      class="base extraBold base base"
    />
  </button>
</div>
`;

exports[`renders a Button with a link and opens in new tab 1`] = `
<div>
  <a
    class="button base work primary"
    href="💩.com"
    target="_blank"
  >
    <span
      class="base extraBold base base"
    >
      Submit
    </span>
  </a>
</div>
`;

exports[`renders a Button with a loading state 1`] = `
<div>
  <button
    class="button base work primary loading"
    type="button"
  >
    <span
      class="base extraBold base base"
    >
      Adding
    </span>
  </button>
</div>
`;

exports[`renders a Button with an icon 1`] = `
<div>
  <button
    class="button base hasIconAndLabel work primary"
    type="button"
  >
    <svg
      class="Z6OfUI2sH34- TphtDHcwxDc-"
      data-testid="add"
      viewBox="0 0 720 720"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class=""
        d="M360.352 87.976c-16.585 0-30.030 13.445-30.030 30.030v210.206h-210.206c-16.585 0-30.030 13.444-30.030 30.030s13.445 30.030 30.030 30.030h210.206v210.206c0 16.585 13.444 30.030 30.030 30.030s30.030-13.444 30.030-30.030v-210.206h210.206c16.585 0 30.030-13.444 30.030-30.030s-13.444-30.030-30.030-30.030h-210.206v-210.206c0-16.585-13.444-30.030-30.030-30.030z"
      />
    </svg>
    <span
      class="base extraBold base base"
    >
      Add
    </span>
  </button>
</div>
`;

exports[`renders a Button with an icon on the right 1`] = `
<div>
  <button
    class="button base hasIconAndLabel iconOnRight work primary"
    type="button"
  >
    <svg
      class="Z6OfUI2sH34- TphtDHcwxDc-"
      data-testid="add"
      viewBox="0 0 720 720"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class=""
        d="M360.352 87.976c-16.585 0-30.030 13.445-30.030 30.030v210.206h-210.206c-16.585 0-30.030 13.444-30.030 30.030s13.445 30.030 30.030 30.030h210.206v210.206c0 16.585 13.444 30.030 30.030 30.030s30.030-13.444 30.030-30.030v-210.206h210.206c16.585 0 30.030-13.444 30.030-30.030s-13.444-30.030-30.030-30.030h-210.206v-210.206c0-16.585-13.444-30.030-30.030-30.030z"
      />
    </svg>
    <span
      class="base extraBold base base"
    >
      Add
    </span>
  </button>
</div>
`;

exports[`renders a Link as a Button for routing 1`] = `
<div>
  <a
    class="button base work primary"
    href="/jobber"
  >
    <span
      class="base extraBold base base"
    >
      Adding
    </span>
  </a>
</div>
`;

exports[`renders a destructuve Button 1`] = `
<div>
  <button
    class="button base destructive primary"
    type="button"
  >
    <span
      class="base extraBold base base"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`renders a disabled Button 1`] = `
<div>
  <button
    class="button base work primary disabled"
    disabled=""
    type="button"
  >
    <span
      class="base extraBold base base"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`renders a large Button 1`] = `
<div>
  <button
    class="button large work primary"
    type="button"
  >
    <span
      class="base extraBold large base"
    >
      Add
    </span>
  </button>
</div>
`;

exports[`renders a learning Button 1`] = `
<div>
  <button
    class="button base learning primary"
    type="button"
  >
    <span
      class="base extraBold base base"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`renders a secondary Button 1`] = `
<div>
  <button
    class="button base work secondary"
    type="button"
  >
    <span
      class="base extraBold base base"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`renders a small Button 1`] = `
<div>
  <button
    class="button small work primary"
    type="button"
  >
    <span
      class="base extraBold small base"
    >
      Add
    </span>
  </button>
</div>
`;

exports[`renders a subtle Button 1`] = `
<div>
  <button
    class="button base subtle primary"
    type="button"
  >
    <span
      class="base extraBold base base"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`renders a tertiary Button 1`] = `
<div>
  <button
    class="button base work tertiary"
    type="button"
  >
    <span
      class="base extraBold base base"
    >
      Submit
    </span>
  </button>
</div>
`;
